@@ -11,6 +11,7 @@ Version 0.8
  logger: Catch SIGTERM to gracefully exit
  obdsim: Seed Random generator with passed seed
  manpage: describe obdsim seeds
+ obd2csv,obd2kml,obdsim logger: Don't create the database file
 
 Version 0.7 (released 2009-06-25)
  Initial add of new module, obdsim
